# websocket_opencv

./: .gitignore  CMakeLists.txt  client.cpp  server.cpp
client_src/: connection_metadata.cpp  connection_metadata.h  websocket_endpoint.cpp  websocket_endpoint.h  x264decoder.cpp  x264decoder.h  x264encoder.cpp  x264encoder.h
h.264codec/: x264decoder.cpp  x264decoder.h  x264encoder.cpp  x264encoder.h
opencv_modules/: FrameStabilizer.cpp  FrameStabilizer.h
server_src/: AV_ecoder.h  base_server.cpp  base_server.h
tutorials/utility_client/: step1.cpp
udp_streamer/: CMakeLists.txt  Streamer.cpp  Streamer.h  main.cpp
websocket_test/: CMakeLists.txt  client.cpp  main.cpp
websocket_test/server_src/: AV_ecoder.cpp  base_server.cpp
